--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "experimentalDecorators": true
   },
   "exclude": ["./node_modules/**/*", "./build/**/*"],
   "include": ["./src/**/*"]
