--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Employee Management Software",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*/ts' --exec 'ts-node' --files src/app.ts",
-    "build": "rm -rf build && tsc -p ."
+    "start": "node dist/app.js",
+    "postinstall": "tsc",
+    "dev": "nodemon --watch 'src/**/*/ts' --exec 'ts-node' --files src/app.ts",
+    "build": "rm -rf build && tsc -p .",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "keywords": [
     "review",
@@ -26,5 +29,8 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": "v14.2.0"
   }
 }
