--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "postinstall": "tsc",
-    "dev": "nodemon --watch 'src/**/*/ts' --exec 'ts-node' --files src/app.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' --files src/app.ts",
     "build": "rm -rf build && tsc -p .",
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
@@ -17,9 +17,11 @@
   "author": "rkhan",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^7.14.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "typeorm": "^0.2.32",
     "typescript-rest": "^3.0.2"
   },
