--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "rkhan",
   "license": "ISC",
   "dependencies": {
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "typeorm": "^0.2.32",
