added bcrypt library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "rkhan",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
